ha/home-assistant/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-assistant
spec:
  selector:
    matchLabels:
      app: home-assistant
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: home-assistant
    spec:
      containers:
        - name: home-assistant
          image: homeassistant/home-assistant:2024.10.3
          ports:
            - containerPort: 8123
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /config
            # https://github.com/tribut/homeassistant-docker-venv
            - name: data
              mountPath: /etc/services.d/home-assistant/run
              subPath: docker/run
              readOnly: true
        - name: code-server
          image: ghcr.io/coder/code-server:4.93.1
          args:
            - --auth
            - none
            - --user-data-dir
            - /config/.vscode
            - --extensions-dir
            - /config/.vscode
            - /config
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: home-assistant-data
