ha/home-assistant/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
spec:
  ports:
    - protocol: TCP
      port: 8123
      targetPort: 8123
      name: http
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: code-server
  selector:
    app: home-assistant
