ha/home-assistant/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant
spec:
  rules:
    - host: ha.neils.house
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  number: 8123
            path: /
            pathType: Prefix

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-code
  annotations:
    nginx.ingress.kubernetes.io/whitelist-source-range: 192.168.1.0/24
spec:
  rules:
    - host: ha-code.internal.neils.house
      http:
        paths:
          - backend:
              service:
                name: home-assistant
                port:
                  number: 8080
            path: /
            pathType: Prefix
